<resources>
    <string name="app_name">HealthGraphs</string>
    <string name="health_connect">Health Connect</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="week">Week</string>
    <string name="day">Day</string>
    <string name="exercise">🏋️‍♂️ Exercise</string>
    <string name="heart_rate">❤️ Heart Rate</string>
    <string name="sleep">😴 Sleep</string>
    <string name="hydration">💧 Hydration</string>
    <string name="steps">👣 Steps</string>
    <string name="connect_to_google_health">Connect to Google Health</string>
    <string name="open_charts">Open Charts</string>
</resources>