<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="connectFragment"
            type="yurazhovnir.healthgraphs.ui.health.HealthConnectFragment" />

        <variable
            name="positionSelected"
            type="Integer" />
    </data>

    <LinearLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{()-> connectFragment.onConnectGoogleHealthClick()}"
            android:padding="16dp">
            <com.makeramen.roundedimageview.RoundedImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_arrow_left_black_24"
                android:onClick="@{()-> connectFragment.onBackClick()}"
                app:riv_corner_radius="25dp"
                app:riv_mutate_background="true"
                app:riv_oval="true" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:gravity="center_vertical"
                android:layout_centerHorizontal="true"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal"
                tools:ignore="UselessParent">
            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/baseline_add_40"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@color/background_green_light"
                android:src="@drawable/baseline_add_40"
                app:riv_corner_radius="25dp"
                app:riv_mutate_background="true"
                app:riv_oval="true" />

            <TextView
                android:id="@+id/textView"
                style="@style/Text.Bold.21sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/health_connect"
                android:textColor="@color/text_green_dark" />
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/weekView"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginEnd="6dp"
                android:layout_weight="1"
                android:onClick="@{()-> connectFragment.onWeekClick()}"
                app:cardBackgroundColor='@{positionSelected == 0 ? @color/color_selected : @color/transparent}'
                app:cardCornerRadius="26dp"
                app:cardElevation="0dp">

                <TextView
                    style="@style/Text.Bold.17sp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/week"
                    android:textColor="@color/text_green_dark" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/monthView"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginEnd="6dp"
                android:layout_weight="1"
                android:onClick="@{()-> connectFragment.onMonthClick()}"
                app:cardBackgroundColor='@{positionSelected == 1 ? @color/color_selected : @color/transparent}'
                app:cardCornerRadius="26dp"
                app:cardElevation="0dp">

                <TextView
                    style="@style/Text.Bold.17sp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/month"
                    android:textColor="@color/text_green_dark" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/yearView"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginEnd="6dp"
                android:layout_weight="1"
                android:visibility="visible"
                android:onClick="@{()-> connectFragment.onYearClick()}"
                app:cardBackgroundColor='@{positionSelected == 2 ? @color/color_selected : @color/transparent}'
                app:cardCornerRadius="26dp"
                app:cardElevation="0dp">

                <TextView
                    style="@style/Text.Bold.17sp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/year"
                    android:textColor="@color/text_green_dark" />
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPager"
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>
</layout>