<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/rootView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="13dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        style="@style/Text.Bold.17sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="12dp"
                        android:gravity="start"
                        android:text="@string/steps"
                        android:textColor="@color/text_green_dark" />
                    <View
                        android:layout_width="match_parent"
                        android:layout_marginBottom="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:background="@color/text_green_dark_50"
                        android:layout_height="1dp"/>
                    <LinearLayout
                        android:id="@+id/chartStepsLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="12dp"
                        android:orientation="vertical" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="13dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/Text.Bold.17sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="12dp"
                        android:gravity="start"
                        android:text="@string/hydration"
                        android:textColor="@color/text_green_dark" />
                        <View
                            android:layout_width="match_parent"
                            android:layout_marginBottom="16dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="16dp"
                            android:background="@color/text_green_dark_50"
                            android:layout_height="1dp"/>
                    <LinearLayout
                        android:id="@+id/chartHydrationLayout"
                        android:layout_width="match_parent"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="12dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="13dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/Text.Bold.21sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="12dp"
                        android:gravity="start"
                        android:text="@string/sleep"
                        android:textColor="@color/text_green_dark" />
                    <View
                        android:layout_width="match_parent"
                        android:layout_marginBottom="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:background="@color/text_green_dark_50"
                        android:layout_height="1dp"/>
                    <LinearLayout
                        android:id="@+id/chartSleepLayout"
                        android:layout_width="match_parent"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="12dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="13dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/Text.Bold.21sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="12dp"
                        android:gravity="start"
                        android:text="@string/heart_rate"
                        android:textColor="@color/text_green_dark" />
                    <View
                        android:layout_width="match_parent"
                        android:layout_marginBottom="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:background="@color/text_green_dark_50"
                        android:layout_height="1dp"/>
                    <LinearLayout
                        android:id="@+id/chartHeartRateLayout"
                        android:layout_width="match_parent"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="12dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="13dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/Text.Bold.21sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="12dp"
                        android:gravity="start"
                        android:text="@string/exercise"
                        android:textColor="@color/text_green_dark" />
                    <View
                        android:layout_width="match_parent"
                        android:layout_marginBottom="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:background="@color/text_green_dark_50"
                        android:layout_height="1dp"/>
                    <LinearLayout
                        android:id="@+id/chartExerciseLayout"
                        android:layout_width="match_parent"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="12dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" />

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</layout>